[FIX] Furigana alignment and centering (especially on mobile) now displays more consistently

--- a/templates/src/styles/globals/typography.scss
+++ b/templates/src/styles/globals/typography.scss
@@ -98,5 +98,24 @@ h1 {
 	}
 }
 
+// --------------------------------------------
+// Furigana display
+
+ruby {
+	display: flex;
+	flex-direction: column-reverse;
+	height: 100%;
+	line-height: 1.3;
+
+	rt {
+		align-items: center;
+		display: flex;
+		justify-content: center;
+		min-height: 15px;
+		text-align: center;
+		width: 100%;
+	}
+}
+
 /* END - Typography
 ============================================== */
