--- a/templates/src/styles/partials/character-and-examples.scss
+++ b/templates/src/styles/partials/character-and-examples.scss
@@ -47,16 +47,6 @@ START - Character and examples */
 	font-size: 28px;
 	font-weight: 300;
 	margin: 0 10px 10px;
-
-	ruby {
-		display: flex;
-		flex-direction: column-reverse;
-		height: 100%;
-
-		rt {
-			min-height: 15px;
-		}
-	}
 }
 
 .word_front_default {
