--- a/templates/src/styles/partials/linked-words.scss
+++ b/templates/src/styles/partials/linked-words.scss
@@ -22,19 +22,6 @@ START - Linked words */
 			margin: 0 10px 10px 0;
 			padding: 5px 10px !important;
 
-			ruby {
-				display: flex;
-				flex-direction: column-reverse;
-				line-height: 1.3;
-
-				rt {
-					align-items: center;
-					display: flex;
-					justify-content: center;
-					min-height: 15px;
-				}
-			}
-
 			@include bp.get(s) {
 				font-size: 26px !important;
 				padding: 5px 15px 8px !important;
